# SOul-Spot

blender/scenes/: dome.blend
docs/SOuL Dome/: Glowing Technology.md  Phosphorescent paint.md
docs/SOuL Dome/.obsidian/: workspace
src/cpp/hello/: hello.ino  test.c.HIDEME
src/cpp/i2c_test/: i2c_test.ino  i2c_test.ino.bak
src/cpp/orb/: black_lights.h  common.h  orb.ino
src/cpp/orb/programs/: program_common.h  programs.h  pulse.h
src/cpp/orb_minimum_pulse/: orb_minimum_pulse.ino
src/cpp/orb_minimum_pulse_2/: orb_minimum_pulse_2.ino
src/cpp/strip_expriment/: strip_go.c
src/cpp/strip_test/: strip_test.ino
src/webapp/: database.py  orb_server.py  programs.py  pyproject.toml
src/webapp/static/: display-range-touch.js  pageLogic.js  penguin.css  penguin.js  range-touch.js  style.css
src/webapp/templates/: forms.jinja  penguin.jinja
